tests/snapshots/parser_snapshots__complex__function_with_local_and_redirect.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"f() { local x=1; echo $x > /dev/null; }\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "f",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
