tests/snapshots/parser_snapshots__complex__heredoc_with_pipe.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"cat <<EOF\\nhello\\nEOF\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "cat",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: None,
                kind: Heredoc,
                target: Heredoc(
                    "hello\n",
                ),
            },
        ],
    },
)
