tests/snapshots/parser_snapshots__complex__mixed_word_parts.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo prefix${VAR}suffix\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "prefix",
                    ),
                    ParameterExpansion(
                        "VAR",
                    ),
                    Literal(
                        "suffix",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
