tests/snapshots/parser_snapshots__complex__nested_if_in_while.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"while true; do if test -f done; then break; fi; done\")"
---
While {
    condition: Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "true",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
    body: If {
        condition: Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "test",
                            ),
                        ],
                    },
                    Word {
                        parts: [
                            Literal(
                                "-f",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
        then_branch: Simple(
            SimpleCommand {
                assignments: [],
                words: [],
                redirections: [],
            },
        ),
        elif_branches: [],
        else_branch: None,
    },
}
