tests/snapshots/parser_snapshots__complex__while_with_heredoc.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"while read line; do echo $line; done <<EOF\\na\\nb\\nEOF\")"
---
Redirected {
    command: While {
        condition: Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "read",
                            ),
                        ],
                    },
                    Word {
                        parts: [
                            Literal(
                                "line",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
        body: Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "echo",
                            ),
                        ],
                    },
                    Word {
                        parts: [
                            Parameter(
                                "line",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
    },
    redirections: [
        Redirection {
            fd: None,
            kind: Heredoc,
            target: Heredoc(
                "a\nb\n",
            ),
        },
    ],
}
